ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Lookup__mdt/Warranty_Lookup__mdt.object-meta.xml
<CustomObject>
    <description>Used to link Product Family, Install Date, and Sector to a Warranty</description>
    <label>Warranty Lookup</label>
    <pluralLabel>Warranty Lookups</pluralLabel>
</CustomObject>