ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Lookup__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Iko Product Family, e.g. 0160000</inlineHelpText>
    <label>Product Family</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>