ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Lookup__mdt/fields/Warranty_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Reduction__c</fullName>
    <inlineHelpText>Warranty Reduction record name</inlineHelpText>
    <label>Warranty Reduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>