ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Lookup__mdt/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term</fullName>
                <default>true</default>
                <label>Term</label>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>NW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>